--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+}
+
+html {
+    height: -webkit-fill-available;
+}
